# BevyThesis

./: .$render pipeline.drawio.bkp  .gitignore  dp.docx  gpu pipeline.drawio  graph.py  readme.md  ~$dp.docx  ~WRL0003.tmp  ~WRL0005.tmp  ~WRL2534.tmp  ~WRL3046.tmp  ~WRL3349.tmp  ~WRL3687.tmp
PYGL-samples/src/: __main__.py
examples/: Cargo.toml
examples/b01_camera_plugin/src/: lib.rs
examples/b03_performance_test/src/: main.rs
examples/p00_window/src/: main.rs
examples/p01_basic_triangle/src/: main.rs
examples/p02_uniform_buffer/src/: main.rs
examples/p03_geometry/: Cargo.toml
examples/p03_geometry/src/: main.rs
examples/p04_textures/: Cargo.toml
examples/p04_textures/src/: main.rs
examples/p05_camera/src/: main.rs
examples/p06_obj/: Cargo.toml
examples/p06_obj/src/: main.rs
examples/p08_light/: Cargo.toml
examples/p08_light/src/: main.rs
examples/p10a_compute_shader/src/: main.rs
examples/p10b_compute_shader/assets/: compute.wgsl  render.wgsl
examples/p10b_compute_shader/exampl/: mainr.rs
examples/p10b_compute_shader/exampl/shaders/: compute_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
examples/p10b_compute_shader/src/: main.rs
examples/p11_geometry_shader/src/: main.rs
examples/p12_multiple_shaders/assets/: b.wgsl
examples/p12_multiple_shaders/src/: main.rs
examples/p13_post_processing/: Cargo.toml
examples/p13_post_processing/assets/: grayscale.wgsl  invert.wgsl
examples/p13_post_processing/src/: main.rs
examples/p15a_deferred_shading/assets/: edge.wgsl
examples/p15a_deferred_shading/src/: main.rs
(+56 files in other folders)
